--- a/src/app/system-layout/sys-header/sys-header.component.html
+++ b/src/app/system-layout/sys-header/sys-header.component.html
@@ -4,7 +4,7 @@
   <ul class="nav-con">
     <ng-container *ngFor="let item of menuList;let idx = index;">
       <li class="fir-nav" (mouseover)="item.isActive=true" (mouseout)="item.isActive=false">
-        <a [routerLink]="[item.menuUrl]" routerLinkActive="active">{{item.desc}}</a>
+        <a (click)="goPage(item)" routerLinkActive="active">{{item.desc}}</a>
         <ul class="sec-nav">
           <ng-container *ngFor="let tem of item.resourcess;let i = index">
             <li [style.display]="item.isActive ? 'block': 'none'">
