--- a/src/app/system/manage/account/account.component.html
+++ b/src/app/system/manage/account/account.component.html
@@ -32,15 +32,15 @@
     <label for="account" class="col-sm-1 col-form-label">用户角色</label>
     <div class="col-sm-2">
       <select class="form-control" id="inputPassword">
-        <option>1</option>
+        <!-- <option>1</option>
         <option>2</option>
         <option>3</option>
-        <option>4</option>
+        <option>4</option> -->
       </select>
     </div>
     <div class="col-sm-6 text-right pr-0">
-        <button class="btn-z primary mr-10"><i class="icon iconfont iconsearch"></i>查询</button>
-        <button class="btn-z primary"><i class="icon iconfont iconrefresh"></i>重置</button>
+      <button class="btn-z primary mr-10"><i class="icon iconfont iconsearch"></i>查询</button>
+      <button class="btn-z primary"><i class="icon iconfont iconrefresh"></i>重置</button>
     </div>
   </div>
 </div>
@@ -60,18 +60,19 @@
     </tr>
   </thead>
   <tbody>
-    <ng-container>
+    <ng-container *ngFor="let element of accountDatas;let index = index;">
       <tr>
-        <th scope="row">1</th>
-        <td>name</td>
+        <th scope="row">{{index}}</th>
+        <td>{{element.name}}</td>
         <td>Otto</td>
-        <td>@mdo</td>
-        <td>Mark</td>
-        <td>Mark</td>
-        <td>roles <a href="javascript:void(0)" (click)="roleDialog = true">设置</a></td>
-        <td>有效</td>
+        <td>mdo</td>
+        <td>{{element.email}}</td>
+        <td>{{element.phoneNumber}}</td>
+        <td> <a href="javascript:void(0)" (click)="roleDialog = true;getRoles(element);">设置</a></td>
+        <td></td>
         <td>
-          <a href="javascript:void(0)" [routerLink]="['/manage/account-detail',24]">详情</a>
+          <!-- <a href="javascript:void(0)" [routerLink]="['/manage/account-detail',24]">详情</a> -->
+          <!-- <a href="javascript:void(0)" (click)="detailDialog = true">详情</a> -->
           &nbsp;|&nbsp;
           <a href="javascript:void(0)">设置无效</a>
         </td>
@@ -84,9 +85,57 @@
   <ng-template #title>
     <span>用户角色选择</span>
   </ng-template>
-  <!-- <span>这篇葛底斯堡演讲朗诵的很好。</span> -->
+  <div style="width:100%;" class="row">
+    <label for="des" class="col-sm-2 col-form-label">访问权限</label>
+    <div class="col-sm-10">
+      <div class="row">
+        <div class="col-sm-4" *ngFor="let element of roleCheckBoxArr;let idx = index;">
+          <label>
+            <input type="checkbox" [checked]="element.selected" [value]="element.selected" (click)="checkboxClicked(idx,$event)">
+            {{element.displayName}}
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
   <ng-template #footer>
-    <ql-button type="success" (click)="roleDialog = false">确定</ql-button>
+    <ql-button type="success" (click)="roleDialog = false;saveUserRole()">确定</ql-button>
     <ql-button (click)="roleDialog = false">取消</ql-button>
+  </ng-template>
+</ql-dialog>
+
+<ql-dialog [(visible)]="detailDialog">
+  <ng-template #title>
+    <span>详细信息</span>
+  </ng-template>
+  <div class="detail-content">
+    <div class="row">
+      <div class="col-sm-2">序号</div>
+      <div class="col-sm-4">7879879</div>
+      <div class="col-sm-2">姓名</div>
+      <div class="col-sm-4">LILEI</div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2">工号</div>
+      <div class="col-sm-4">7879879</div>
+      <div class="col-sm-2">账号</div>
+      <div class="col-sm-4">LILEI</div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2">邮件</div>
+      <div class="col-sm-4">7879879</div>
+      <div class="col-sm-2">电话</div>
+      <div class="col-sm-4">LILEI</div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2">已分配角色</div>
+      <div class="col-sm-4">7879879</div>
+      <div class="col-sm-2">状态</div>
+      <div class="col-sm-4">LILEI</div>
+    </div>
+  </div>
+  <ng-template #footer>
+    <ql-button type="success" (click)="detailDialog = false">确定</ql-button>
+    <ql-button (click)="detailDialog = false">取消</ql-button>
   </ng-template>
 </ql-dialog>
