--- a/src/app/system/manage/application/application-directory/application-directory.component.html
+++ b/src/app/system/manage/application/application-directory/application-directory.component.html
@@ -20,11 +20,13 @@
   <div class="form-group row">
     <label for="des" class="col-sm-2 col-form-label">访问权限</label>
     <div class="col-sm-10">
-      <div class="checkbox" *ngFor="let element of roleCheckBoxArr;let idx = index;">
-        <label>
-          <input type="checkbox" [value]="element.selected" (click)="checkboxClicked(idx,$event)">
-          {{element.displayName}}
-        </label>
+      <div class="row">
+        <div class="col-sm-4" *ngFor="let element of roleCheckBoxArr;let idx = index;">
+          <label>
+            <input type="checkbox" [value]="element.selected" (click)="checkboxClicked(idx,$event)">
+            {{element.displayName}}
+          </label>
+        </div>
       </div>
     </div>
   </div>
