--- a/src/app/system/manage/application/application.component.scss
+++ b/src/app/system/manage/application/application.component.scss
@@ -2,6 +2,9 @@
     display: none;
 }
 .page-btn-line {
-    text-align: right;
+    text-align: left;
     margin-bottom: 10px;
+}
+.td-lv2 {
+    padding-left: 20px;
 }
