--- a/src/app/system/manage/role/role.component.scss
+++ b/src/app/system/manage/role/role.component.scss
@@ -10,6 +10,10 @@
         padding-right: 0;
     }
 }
+.page-btn-line {
+    text-align: left;
+    margin-bottom: 10px;
+}
 .sp-pt {
     padding-top: calc(0.375rem + 1px);
 }
