--- a/src/app/system-layout/sys-siderbar/sys-siderbar.component.scss
+++ b/src/app/system-layout/sys-siderbar/sys-siderbar.component.scss
@@ -6,6 +6,7 @@
     height: 796px;
     float: left;
     background: #316799;
+    text-align: center;
     ul{
         width: 100%;
         li{
@@ -16,11 +17,6 @@
             font-size: 1.48rem;
             color: #ffffff;
             background: #2b7ac3;
-            // background-image: url("../../../assets/images/07.png");
-            // background-repeat: no-repeat;
-            // background-size: 10%;
-            // background-position-x: 18%;
-            // background-position-y: 50%;
             i {
                 color: #fff;
                 margin-right: 5px;
