--- a/src/app/system/home/home.component.html
+++ b/src/app/system/home/home.component.html
@@ -5,7 +5,7 @@
 <!-- <app-text-news></app-text-news>
 <app-image-news></app-image-news> -->
 
-<h1>Welcome to Angular World zz</h1>
+<!-- <h1>Welcome to Angular World zz</h1> -->
 
 <ng-template #tplR></ng-template>
 
