--- a/src/app/system-layout/sys-siderbar/sys-siderbar.component.html
+++ b/src/app/system-layout/sys-siderbar/sys-siderbar.component.html
@@ -7,4 +7,29 @@
     <li><i class="icon iconfont iconglobe"></i>应用连接</li>
     <li><i class="icon iconfont iconglobe"></i>应用连接</li>
   </ul>
+  <i class="fa fa-plus" (click)="collectDialog = true">+</i>
 </div>
+
+<ql-dialog [(visible)]="collectDialog">
+  <ng-template #title>
+    <span>选择收藏</span>
+  </ng-template>
+  <div style="width:100%;" class="row">
+    <label for="des" class="col-sm-2 col-form-label">访问权限</label>
+    <div class="col-sm-10">
+      <div class="row">
+        <div class="col-sm-4" *ngFor="let element of collectCboxsArr;let idx = index;">
+          <label>
+            <input type="checkbox" [checked]="element.selected" [value]="element.selected"
+              (click)="checkboxClicked(idx,$event)">
+            {{element.desc}}
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+  <ng-template #footer>
+    <ql-button type="success" (click)="asveCollect()">确定</ql-button>
+    <ql-button (click)="collectDialog = false">取消</ql-button>
+  </ng-template>
+</ql-dialog>
