--- a/src/app/system/manage/account/account.component.html
+++ b/src/app/system/manage/account/account.component.html
@@ -72,7 +72,7 @@
         <td></td>
         <td>
           <!-- <a href="javascript:void(0)" [routerLink]="['/manage/account-detail',24]">详情</a> -->
-          <!-- <a href="javascript:void(0)" (click)="detailDialog = true">详情</a> -->
+          <a href="javascript:void(0)" (click)="detailDialog = true">详情</a>
           &nbsp;|&nbsp;
           <a href="javascript:void(0)">设置无效</a>
         </td>
