--- a/src/app/system/manage/application/application-link/application-link.component.html
+++ b/src/app/system/manage/application/application-link/application-link.component.html
@@ -4,7 +4,7 @@
     <div class="col-sm-10">
       <select class="form-control" id="inputPassword" [(ngModel)]="linkObj.parentId"
         (ngModelChange)="directorySelected($event)">
-        <option *ngFor="let element of directorySelectArr" [value]="element.id">{{element.menuName}}</option>
+        <option *ngFor="let element of directorySelectArr" [value]="element.id">{{element.desc}}</option>
       </select>
     </div>
   </div>
